<resources>
    <string name="app_name">El Gordo Gato</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_single_fragment">SingleFragmentActivity</string>
    <string name="title_activity_splash">El Gordo Gato</string>
    <string name="title_activity_login">Login</string>

    <!-- LoginHomeFragment Strings -->
    <string name="login_name_string">Enter Username</string>
    <string name="login_password_string">Enter Password</string>
    <string name="login_button_string">Login</string>
    <string name="login_new_user_string">Not Registered?</string>
    <string name="login_forgot_string">Forgot Information?</string>
    <string name="login_incorrect_string">Information not correct.</string>
    <string name="login_no_account">Account not registered.</string>

    <!-- Forgot Password Dialog Strings-->
    <string name="forgot_dialog_email_header">Please enter e-mail address: </string>
    <string name="forgot_dialog_password_hint">ex: sample@sample.com</string>
    <string name="forgot_dialog_send">Send</string>
    <string name="forgot_dialog_cancel">Cancel</string>

    <!-- New Register Dialog Strings -->
    <string name="register_dialog_info_header">Please Fill Out Information: </string>
    <string name="register_dialog_username_hint">Username</string>
    <string name="register_dialog_password_hint">Password</string>
    <string name="register_dialog_email_hint">E-mail</string>
    <string name="register_dialog_send">Send</string>
    <string name="register_dialog_cancel">Cancel</string>
    <string name="register_dialog_inv_username">Username already in use.</string>
    <string name="register_dialog_inv_email">Email already use, click forgot information.</string>
    <string name="register_dialog_success">Account created, welcome.</string>
    <string name="register_dialog_null_username">Username is invalid.</string>
    <string name="register_dialog_null_password">Password is invalid.</string>
    <string name="register_dialog_null_email">Password is invalid.</string>

    <!-- Forgot Dialog Strings-->
    <string name="information_dialog_email_string">Enter Email Address.</string>
    <string name="information_dialog_header">Email Retrieval</string>
    <string name="information_dialog_send">Send</string>
    <string name="information_dialog_cancel">Cancel</string>
    <string name="information_dialog_success">Email was sent.</string>
    <string name="information_dialog_failure">Email address not found, please try again.</string>
    <string name="information_dialog_not_sent">Email did not send.</string>

    <!--Settings Tab-->
    <string name="settings_edit_title_str">Update your Information</string>
    <string name="setting_name_tv_header">Name:</string>
    <string name="settings_name_et">Name</string>
    <string name="settings_password_tv">Change Password:</string>
    <string name="settings_password_et">Password</string>
    <string name="settings_confirm_tv">Confirm Password:</string>
    <string name="settings_email_tv">Change Email:</string>
    <string name="settings_email_et">Email Address</string>
    <string name="settings_preference_tv">Truck Search Range(Miles):</string>
    <string name="settings_save_button">Save</string>
    <string-array name="range_array">
        <item>     05</item>
        <item>     10</item>
        <item>     25</item>
        <item>     50</item>
        <item>     100</item>
    </string-array>


    <!--Employee Inventory Fragment -->
    <string name="emp_load_inv_str">Inventory</string>
    <string name="emp_inv_add_button">Add Item</string>

    <!--Add Inventory Dialog -->
    <string name="add_dialog_add_button">Add Item</string>
    <string name="add_dialog_cancel_button">Cancel</string>
    <string name="add_dialog_prod_name_hint">Product Name</string>
    <string name="add_dialog_prod_price_hint">Product Price</string>

    <!-- Edit Inventory Dialog -->
    <string name="edit_inv_edit_button">Save Edit</string>
    <string name="edit_inv_cancel_button">Cancel</string>
    <string name="edit_inv_delete_button">Remove Item</string>

    <!-- Employee Settings -->
    <string name="emp_set_edit_title">Update your Information</string>
    <string name="emp_set_name_tv">Name:</string>
    <string name="emp_set_name_et">Name</string>
    <string name="emp_set_password_tv">Change Password:</string>
    <string name="emp_set_password_et">Password</string>
    <string name="emp_set_confirm_tv">Confirm Password:</string>
    <string name="emp_set_email_tv">Change Email:</string>
    <string name="emp_set_email_et">Email Address</string>
    <string name="emp_set_truck_tv">Food Truck Name:</string>
    <string name="emp_set_truck_et">Truck Name</string>
    <string name="emp_set_save_button">Save</string>
    <string name="emp_set_broadcast_tv">Broadcast Location:</string>


    <!-- Customer Favorites-->
    <string name="favorites_cancel_button">Cancel</string>
    <string name="favorites_order_button">Order Item</string>
    <string name="favorites_add_button">Favorite</string>

    <!-- Edit Favorites Dialog -->
    <string name="edit_fav_remove_str">Remove</string>

    <!-- Cart Fragment -->
    <string name="cart_remove_button">Remove Item</string>
    <string name="cart_order_button">Place Order</string>
    <string name="cart_empty_toast">Cart is empty</string>

    <!-- Employee Orders-->
    <string name="orders_cooked_button">Cooked</string>
    <string name="orderes_remove_button">Remove</string>

</resources>
