<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="@drawable/register_dialog"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/textColorPrimary"
        android:textSize="20sp"
        android:textAlignment="center"
        android:text="@string/register_dialog_info_header"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_username_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/register_dialog_username_hint"
            android:id="@+id/register_dialog_username"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center"
            android:singleLine="true"
            android:hint="@string/register_dialog_password_hint"
            android:id="@+id/register_dialog_password"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/register_email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:gravity="center"
            android:hint="@string/register_dialog_email_hint"
            android:id="@+id/register_dialog_email"/>

    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="200dp"
        android:layout_height="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:text="@string/information_dialog_cancel"
            android:textColor="@color/colorAccent"
            android:id="@+id/register_dialog_cancel_button"/>

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/colorAccent"
            android:text="@string/information_dialog_send"
            android:id="@+id/register_dialog_send_button"/>

    </LinearLayout>

</LinearLayout>
