<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_shape">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/forgot_id_header"
        android:textColor="@color/textColorPrimary"
        android:textSize="16sp"
        android:gravity="center"
        android:textAlignment="center"
        android:text="@string/information_dialog_header"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/forgot_id_email_et"
            android:gravity="center"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:singleLine="true"
            android:hint="@string/information_dialog_email_string"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/colorAccent"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:text="@string/information_dialog_cancel"
            android:id="@+id/forgot_id_cancel_button"/>

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/colorAccent"
            android:text="@string/information_dialog_send"
            android:id="@+id/forgot_id_send_button"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp" />


    </LinearLayout>
  </LinearLayout>
