<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorPrimaryDark"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_header"
                android:layout_marginTop="40dp"
                android:textColor="@color/textColorPrimary"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:textSize="16sp"
                android:text="@string/emp_set_edit_title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@android:color/black"
                android:layout_below="@+id/emp_set_header"
                android:layout_marginTop="8dp"
                android:id="@+id/view01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_name_tv"
                android:text="@string/emp_set_name_tv"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/view01"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_name_et"
                android:singleLine="true"

                android:textAlignment="center"
                android:ems="7"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/view01"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_password_tv"
                android:textColor="@color/colorAccent"
                android:text="@string/emp_set_password_tv"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/emp_set_name_tv"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_password_et"
                android:inputType="textPassword"

                android:textAlignment="center"
                android:singleLine="true"
                android:ems="7"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/emp_set_name_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:id="@+id/emp_set_confirm_tv"
                android:text="@string/emp_set_confirm_tv"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/emp_set_password_tv"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_confirm_et"
                android:textAlignment="center"
                android:singleLine="true"
                android:inputType="textPassword"

                android:ems="7"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/emp_set_password_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_email_tv"
                android:textColor="@color/colorAccent"
                android:text="@string/emp_set_email_tv"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/emp_set_confirm_tv"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_email_et"
                android:inputType="textEmailAddress"
                android:textAlignment="center"

                android:singleLine="true"
                android:ems="7"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/emp_set_confirm_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_truck_tv"
                android:textColor="@color/colorAccent"
                android:text="@string/emp_set_truck_tv"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/emp_set_email_tv"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_truck_et"
                android:textAlignment="center"

                android:singleLine="true"
                android:ems="7"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/emp_set_email_tv"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_toggle_tv"
                android:text="@string/emp_set_broadcast_tv"
                android:textColor="@color/colorAccent"
                android:layout_marginTop="15dp"
                android:textSize="16sp"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/emp_set_truck_tv"/>

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_toggle_button"
                android:background="@drawable/button_shape"
                android:textColor="@color/colorAccent"
                android:layout_alignTop="@+id/emp_set_toggle_tv"
                android:layout_alignLeft="@+id/emp_set_truck_et"
                android:layout_alignStart="@+id/emp_set_truck_et"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/emp_set_save_button"
                android:textColor="@color/colorAccent"
                android:background="@drawable/button_shape"
                android:layout_marginTop="45dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:text="@string/emp_set_save_button"
                android:layout_below="@+id/emp_set_toggle_tv"/>
        </RelativeLayout>

    </ScrollView>
</LinearLayout>
