<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:background="@drawable/dialog_shape"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/textColorPrimary"
            android:id="@+id/favorites_header"
            android:paddingBottom="15dp"
            android:textSize="20sp"
            android:textAlignment="center"
            android:text="@string/favorites_header"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_below="@id/favorites_header"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/favorite_truck_name"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/favorites_header"
            android:textColor="@color/colorAccent"
            android:id="@+id/favorite_prod_name"
            android:layout_alignParentLeft="true"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:id="@+id/favorite_prod_price"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:layout_below="@+id/favorite_prod_name"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/colorAccent"
            android:text="@string/favorites_cancel_button"
            android:id="@+id/favorite_cancel_button"/>

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/colorAccent"
            android:text="@string/favorites_add_button"
            android:id="@+id/favorite_add_button"/>

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape"
            android:textColor="@color/colorAccent"
            android:text="@string/favorites_order_button"
            android:id="@+id/favorite_order_button"/>

    </LinearLayout>

</LinearLayout>
